Ejercicio morse | vehiculo ordenamiento